--- a/css/style.css
+++ b/css/style.css
@@ -10,21 +10,37 @@
     border-radius: 20px;
     justify-content: center;
     align-items: start;
-    height: 800px;
-    width: 450px;
-    /* dubug */
+    width: 600px;
     background-color: lightgray;
     }
 
     .button-main {
-        padding: 40px 40px;
+        width: calc(100%/3 - 10px);
         margin: 5px;
+        padding: 30px 30px;
+        border-radius: 5px;
+        background-color: darkgray;
+        font-size: 36px;
+        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    }
+
+    .button-color {
+        background-color: orange;
+        color: white;
+    }
+
+    .button-color2 {
+        background-color: rgb(53, 96, 118);
+        color: white;
     }
 
     .button-secondary {
-        
-        padding: 25px 35px;
+        border-radius: 5px;
         margin: 5px;
+        padding: 30px 30px;
+        font-size: 36px;
+        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+        width: calc(100% - 10px);
     }
 
 .header {
@@ -33,8 +49,7 @@
         background-color:#edf2f7;
         padding: 10px 0;
         text-align: center;
-        display: block;
-        width: 500px;
+        width: 100%;
       }
 /* /COMMON */  
 
@@ -46,29 +61,33 @@
     font-family: Arial, Helvetica, sans-serif;
     padding: 40px 20px;
     font-size: 36px;
+    width: 100%;
 }
 
 /* PAD */
 .pad {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 2px;
+    justify-content: flex-start;
+    width: 100%;
 
 }
 
 .number {
+    margin: 10px 0px 10px 10px;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    flex-grow: 2;
+    width: 80%;
 }
 
 .grow2 {
     flex-grow: 2;
     padding: 40px;
+    margin: 5px;
 }
 
 .option {
-    text-align: center;
-    margin: 10px 0;
+    margin: 10px 10px 10px 0px;
+width: 20%;
 }
