--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,8 @@
 
 /* COMMON */
 .calculator {
+    position: absolute;
+    margin: 60px;
     border-radius: 20px;
     justify-content: center;
     align-items: start;
